Update all instructions